# embodied

./: LICENSE  README.md  pyproject.toml
embodied/: __init__.py
embodied/api/: __init__.py  config.py  make.py
embodied/core/: __init__.py  tree.py  utils.py
embodied/nn/: __init__.py  attention.py  base.py  cnn.py  const.py  distributions.py  embeddings.py  functional.py  jaxutils.py  nlp.py  optimizers.py  utils.py
embodied/replay/: selectors.py
embodied/scripts/: install-full-libraries.sh
experimental/: overall.py
tests/nn/: attention.py  cnn.py
